<resources>
    <string name="app_name">MainProject</string>

    <string name="sign_in">Войти</string>

    <string name="sign_in_title">@string/sign_in</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_action">@string/sign_in</string>

    <string name="catalog_title">Каталог</string>

    <string name="item_menu_profile">Профиль</string>

    <string name="buy_text">Купить</string>

    <string name="button_refresh">Обновить</string>
    <string name="child_progress_container_exception_text">ProgressContainer can host only one direct child</string>
    <string name="cost_rubles">%1$s ₽</string>

    <string name="progress_container_empty_title">Товары не обнаружены</string>
    <string name="progress_container_empty_description">Попробуйте обновить, вдруг товары появились</string>
    <string name="progress_container_error_title">Произошла непредвиденная ошибка</string>
    <string name="progress_container_error_description">Детальный текст ошибки, занимающий несколько строк</string>

    <string name="progress_item_retry_button">Повторить</string>
    <string name="child_progress_item_exception_text">ProgressItem can host only one direct child</string>

    <string name="size_hint">Размер</string>

    <string name="buy_now_text">Купить сейчас</string>

    <string name="text_application_version">Приложение %1$s (%2$s)</string>

    <string name="text_regex_email">[A-Za-z0-9]+@[A-Za-z0-9]+.[A-Za-z0-9]+</string>

    <string name="text_name_profile">%1$s %2$s</string>

    <string name="sign_out_dialog_title">Вы действительно хотите выйти?</string>
    <string name="sign_out_dialog_positive">Выйти</string>
    <string name="sign_out_dialog_negative">Отмена</string>

    <string name="sign_in_input_error">Поле заполнено неверно</string>
    <string name="sign_in_error">Непредвиденная ошибка</string>

    <string name="profile_button_orders">Мои заказы</string>
    <string name="profile_button_settings">Настройки</string>
    <string name="profile_button_sign_out">Выйти</string>

    <string name="orders_toolbar_title">@string/profile_button_orders</string>

    <string name="text_tab_all">Все %1$d</string>
    <string name="text_tab_active">Активные %1$d</string>

    <string name="item_orders_header">Заказ №%1$d от %2$s</string>
    <string name="date_order_header_format">dd.MM.uu kk:mm</string>

    <string name="item_orders_in_work">В работе</string>
    <string name="item_orders_canceled">Отменен</string>
    <string name="item_orders_done">Доставлен</string>

    <string name="item_orders_title">%1$d × %2$s • %3$s</string>
    <string name="item_orders_delivery_information">Дата доставки: %1$s\nАдрес доставки: %2$s</string>
    <string name="item_orders_cancellation_information">Был отменен %1$s</string>
    <string name="item_orders_done_information">Был доставлен %1$s</string>

    <string name="item_orders_cancel">Отменить</string>

    <string name="new_order_toolbar_title">Оформление заказа</string>
    <string name="new_order_product_title">%1$s • %2$s</string>
    <string name="new_order_location_hint">Дом</string>
    <string name="new_order_apartment_hint">Квартира</string>
    <string name="new_order_date_hint">Дата доставки</string>
    <string name="new_order_button">Купить за %1$s ₽</string>
    <string name="date_picker_title">Выбор даты</string>
    <string name="map_title">Выбор дома</string>
    <string name="map_button_enter">Выбрать</string>

    <string name="settings_name_hint">Имя</string>
    <string name="settings_surname_hint">Фамилия</string>
    <string name="settings_occupation_hint">Род деятельности</string>
    <string name="settings_button_change">Изменить</string>
    <string name="settings_error_empty">Введите значение</string>
</resources>