<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/normal_100"
    android:layout_marginEnd="@dimen/normal_100">

    <TextView
        android:id="@+id/textTitleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2sp"
        android:text="@string/sign_in"
        android:textColor="@color/black_87pc"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/layoutLoginSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLoginSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/sign_in_login_hint"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/layoutPasswordSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLoginSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasswordSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/sign_in_password_hint"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/progressButtonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLoginSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.mainproject.presentation.ui.customviews.ProgressButton
        android:id="@+id/progressButtonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPasswordSignIn"
        app:layout_constraintVertical_bias="0"
        app:text="@string/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>