<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarNewOrder"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.Material3.Toolbar.Surface.Catalog"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/new_order_toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeaderNewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageProductNewOrder"
                android:layout_width="@dimen/image_product_new_order_size"
                android:layout_height="@dimen/image_product_new_order_size"
                android:layout_marginVertical="@dimen/normal_100"
                android:layout_marginStart="@dimen/normal_100"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitleNewOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginTop="@dimen/normal_100"
                android:layout_marginEnd="@dimen/small_100"
                android:lineSpacingExtra="4sp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageProductNewOrder"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDepartmentNewOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginEnd="@dimen/small_100"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/silver_chalice"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageProductNewOrder"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleNewOrder" />

            <com.example.mainproject.presentation.ui.customviews.CounterView
                android:id="@+id/counterNewOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_100"
                android:layout_marginBottom="@dimen/normal_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutLocationNewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_200"
            android:hint="@string/new_order_location_hint"
            app:endIconDrawable="@drawable/ic_chevron_right"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeaderNewOrder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textLocationNewOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutApartmentNewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_200"
            android:hint="@string/new_order_apartment_hint"
            app:endIconDrawable="@drawable/ic_chevron_right"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutLocationNewOrder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textApartmentNewOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDateNewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_200"
            android:hint="@string/new_order_date_hint"
            app:endIconDrawable="@drawable/ic_chevron_right"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutApartmentNewOrder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDateNewOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.mainproject.presentation.ui.customviews.ProgressButton
            android:id="@+id/progressButtonNewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginBottom="@dimen/normal_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>